syntax = "proto3";
package authentication;


service Authentication {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}


message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string role = 4;
}


message SignUpResponse {
  bool success = 1;
  string message = 2;
}


message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  bool success = 1;
  string message = 2;
  string jwt = 3;
}

